# net_sentinel

./: .gitignore  Cargo.toml  README.md
src/: capture.rs  main.rs  ml.rs
src/capture/: mod.rs  sniffer.rs  types.rs
src/ml/: data.rs  engine.rs  mod.rs
src/protocols/: handler.rs  mod.rs  proto_ipv4.rs  proto_ipv6.rs
src/tui/: app.rs  mod.rs  terminal.rs  ui.rs
